[package]
name = "oidc-rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
dotenv = "0.15.0"
hyper = { version = "1.3.1", features = ["full"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
